# ColorImageViewer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json
Src/: Image.cpp  Image.hpp  ImageGrid.cpp  ImageItem.cpp  ImageItem.hpp  ImageLoader.hpp  Loader.cpp  Loader.hpp  LoaderTask.hpp  LoaderWorker.hpp  Logger.hpp  Main.cpp  MainWindow.cpp  MainWindow.hpp
Src/Common/: AverageColor.hpp  Image.hpp  Scaler.hpp
Src/Loader/: ImageLoader.hpp  Loader.hpp  LoaderTask.hpp  LoaderWorker.hpp
Src/Widgets/: ImageGrid.hpp  ImageItem.cpp  ImageItem.hpp
Src/Windows/: MainWindow.cpp  MainWindow.hpp
